--- a/Laboratory1/app/src/main/res/layout/activity_fifth.xml
+++ b/Laboratory1/app/src/main/res/layout/activity_fifth.xml
@@ -8,14 +8,14 @@
     tools:context=".FifthActivity">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rv_recyclerView"
+        android:id="@+id/recyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginStart="4dp"
-        android:layout_marginBottom="4dp"
-        android:layout_marginEnd="4dp"
         android:layout_marginTop="4dp"
-        tools:itemCount="30"
-        tools:listitem="@layout/item_layout"/>
+        android:layout_marginEnd="4dp"
+        android:layout_marginBottom="4dp"
+        tools:itemCount="17"
+        tools:spanCount="5" />
 
 </RelativeLayout>
