--- a/Laboratory1/app/src/main/res/layout/item_layout.xml
+++ b/Laboratory1/app/src/main/res/layout/item_layout.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="190dp"
     android:layout_margin="4dp"
     android:clickable="true"
     android:focusable="true"
@@ -11,13 +11,13 @@
     app:cardCornerRadius="10dp">
 
     <RelativeLayout
-        android:id="@+id/rl_wrapper"
+        android:id="@+id/thisWrapper"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:padding="20dp">
 
         <ImageView
-            android:id="@+id/iv_image"
+            android:id="@+id/thisImage"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
@@ -25,34 +25,42 @@
             android:src="@mipmap/airplane_ic_launcher"/>
 
         <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_alignTop="@id/iv_image"
-            android:layout_alignBottom="@id/iv_image"
-            android:layout_toEndOf="@id/iv_image"
-            android:layout_toRightOf="@id/iv_image"
+            android:layout_width="268dp"
+            android:layout_height="104dp"
+            android:layout_alignTop="@id/thisImage"
+            android:layout_alignBottom="@id/thisImage"
+            android:layout_marginBottom="-32dp"
+            android:layout_toEndOf="@id/thisImage"
+            android:layout_toRightOf="@id/thisImage"
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/tv_title"
+                android:id="@+id/thisTitle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
                 android:layout_marginLeft="10dp"
                 android:text="Title"
                 android:textColor="@android:color/black"
-                android:textSize="20sp"/>
+                android:textSize="20sp" />
 
             <TextView
-                android:id="@+id/tv_description"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:id="@+id/thisDescription"
+                android:layout_width="247dp"
+                android:layout_height="60dp"
                 android:layout_marginStart="10dp"
                 android:layout_marginLeft="10dp"
                 android:text="This is a description"
                 android:textColor="@android:color/darker_gray"
-                android:textSize="20sp"/>
+                android:textSize="20sp" />
+
+            <TextView
+                android:id="@+id/postTime"
+                android:layout_width="100dp"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="180dp" />
 
         </LinearLayout>
+
     </RelativeLayout>
 </androidx.cardview.widget.CardView>
