--- a/Laboratory1/app/src/main/res/layout/activity_third.xml
+++ b/Laboratory1/app/src/main/res/layout/activity_third.xml
@@ -89,5 +89,17 @@
         app:layout_constraintTop_toBottomOf="@+id/goToListBtn"
         app:layout_constraintVertical_bias="0.673" />
 
+    <Button
+        android:id="@+id/goToContacts"
+        android:layout_width="180dp"
+        android:layout_height="50dp"
+        android:text="Contacts"
+        app:layout_constraintBottom_toTopOf="@+id/button"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.982" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
